[gd_scene load_steps=9 format=3 uid="uid://bifgas3k4tm76"]

[ext_resource type="Script" path="res://addons/Page_plugin/page.gd" id="1_evj0t"]
[ext_resource type="Script" path="res://scripts/els.gd" id="2_vrbli"]
[ext_resource type="LabelSettings" uid="uid://cs1s4uxoiybpd" path="res://art/label_settings/general.tres" id="3_c3ti7"]
[ext_resource type="Theme" uid="uid://dwkeosexc3645" path="res://art/themes/button.tres" id="4_k8s52"]
[ext_resource type="FontFile" uid="uid://bbfeoo2kuf30n" path="res://addons/material-design-icons/fonts/material_design_icons.ttf" id="5_apj3r"]
[ext_resource type="Script" path="res://addons/material-design-icons/nodes/MaterialIcon.gd" id="6_2abup"]
[ext_resource type="PackedScene" uid="uid://dalxlfk10e512" path="res://scenes/rendering_server.tscn" id="7_ilfoa"]

[sub_resource type="LabelSettings" id="LabelSettings_b4cds"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="ELS" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_evj0t")
page_name = "Home"

[node name="Contents" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vrbli")

[node name="MarginContainer" type="MarginContainer" parent="Contents"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Name" type="Label" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Equidistant Letter Sequence"
label_settings = SubResource("LabelSettings_b4cds")
horizontal_alignment = 1
vertical_alignment = 1

[node name="file" type="Label" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "File: Torah.txt"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1

[node name="search" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="search1" type="HBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search1"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search1/VBoxContainer"]
layout_mode = 2
text = "Letters Per Row"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderContainer" type="HBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search1/VBoxContainer"]
layout_mode = 2

[node name="row_size" type="HSlider" parent="Contents/MarginContainer/VBoxContainer/search/search1/VBoxContainer/SliderContainer"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
value = 25.0

[node name="LabelSize" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search1/VBoxContainer/SliderContainer"]
layout_mode = 2
text = "24"
label_settings = ExtResource("3_c3ti7")

[node name="searchbar" type="TextEdit" parent="Contents/MarginContainer/VBoxContainer/search/search1"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Search"

[node name="igSub" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search1"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search1/igSub"]
visible = false
layout_mode = 2
text = "IgSub"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="checkBox" type="CheckBox" parent="Contents/MarginContainer/VBoxContainer/search/search1/igSub"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
button_pressed = true
text = "IgSub
"
flat = true

[node name="mulTerms" type="CheckBox" parent="Contents/MarginContainer/VBoxContainer/search/search1"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Multiple Terms"

[node name="Button" type="Button" parent="Contents/MarginContainer/VBoxContainer/search/search1"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_k8s52")

[node name="MaterialIcon" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search1/Button"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_apj3r")
theme_override_font_sizes/font_size = 28
text = "Û∞çâ"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_2abup")
icon_name = "magnify"
icon_size = 28

[node name="search2" type="HBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search"]
visible = false
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="searchbar" type="TextEdit" parent="Contents/MarginContainer/VBoxContainer/search/search2"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Term 2"

[node name="searchbar2" type="TextEdit" parent="Contents/MarginContainer/VBoxContainer/search/search2"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Term 3"

[node name="searchbar3" type="TextEdit" parent="Contents/MarginContainer/VBoxContainer/search/search2"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Term 4"

[node name="searchbar4" type="TextEdit" parent="Contents/MarginContainer/VBoxContainer/search/search2"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Term 5"

[node name="search3" type="HBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="start" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search3"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search3/start"]
layout_mode = 2
text = "Start"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="LineEdit" parent="Contents/MarginContainer/VBoxContainer/search/search3/start"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
placeholder_text = "0"
max_length = 20
expand_to_text_length = true

[node name="end" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search3"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search3/end"]
layout_mode = 2
text = "End"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="LineEdit" parent="Contents/MarginContainer/VBoxContainer/search/search3/end"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
placeholder_text = "100000"
max_length = 20

[node name="minSkip" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search3"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search3/minSkip"]
layout_mode = 2
text = "Min Skip"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="LineEdit" parent="Contents/MarginContainer/VBoxContainer/search/search3/minSkip"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
placeholder_text = "2"
max_length = 20

[node name="maxSkip" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/search/search3"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/MarginContainer/VBoxContainer/search/search3/maxSkip"]
layout_mode = 2
text = "Max Skip"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="LineEdit" parent="Contents/MarginContainer/VBoxContainer/search/search3/maxSkip"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
placeholder_text = "1000"
max_length = 20

[node name="searchbar" type="TextEdit" parent="Contents/MarginContainer/VBoxContainer/search/search3"]
visible = false
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Search"

[node name="Control" type="Control" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Contents/MarginContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
offset_right = 1888.0
offset_bottom = 800.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Contents/MarginContainer/VBoxContainer/Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="Contents/MarginContainer/VBoxContainer/Control/ScrollContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1800, 800)
render_target_update_mode = 4

[node name="RenderingServer" parent="Contents/MarginContainer/VBoxContainer/Control/ScrollContainer/SubViewportContainer/SubViewport" instance=ExtResource("7_ilfoa")]
position = Vector2(-128, -128)

[node name="RichTextLabel" type="RichTextLabel" parent="Contents/MarginContainer/VBoxContainer/Control/ScrollContainer"]
visible = false
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
fit_content = true
threaded = true
progress_bar_delay = 10
selection_enabled = true
text_direction = 2
language = "he_IL"

[node name="status" type="Label" parent="Contents/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Status: Logged In"
label_settings = ExtResource("3_c3ti7")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Contents/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 72)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_k8s52")
theme_override_font_sizes/font_size = 32
text = "Sign Out"

[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer/search/search1/mulTerms" to="Contents" method="_on_mul_terms_pressed"]
[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer/search/search1/Button" to="Contents" method="_on_search_button_pressed"]
[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer/Button" to="Contents" method="_on_button_pressed"]
